#工程名
SET(PROJECT_NAME "PBApiTest")
project(${PROJECT_NAME})
enable_language(CXX)
cmake_minimum_required(VERSION 2.8)
if(UNIX)
	add_compile_options(-std=c++11)
	add_definitions(-D LINUX)
	add_compile_options(-g)
endif(UNIX)
#宏定义，添加一个包
#name：是一个不带双引号的字符
#dir：是一个不带引号的路径
macro(add_package name dir)
	include_directories(${dir})
	set(hfind ${ARGV1})
	string(APPEND hfind "/*.h")
	set(cfind ${ARGV1})
	string(APPEND cfind "/*.cpp")
	file(GLOB_RECURSE name_header ${hfind})
	file(GLOB_RECURSE name_cpp ${cfind})
	source_group(${ARGV0} FILES ${name_header} ${name_cpp})
	set(all_file ${all_file} ${name_header} ${name_cpp})
endmacro(add_package)

#set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /NODEFAULTLIB:libc.lib")
#set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS}  /NODEFAULTLIB:nafxcw.lib /NODEFAULTLIB:libcmt.lib")
set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS}  /NODEFAULTLIB:msvcrt.lib")
#set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /SAFESEH:NO")

add_package(src ./src)
add_package(GenCode ./GenCode)
add_package(StepApiFunc ./StepApiFunc)
add_package(Utility ../../source/Utility)
add_package(MemCache ../../source/MemCache)
add_package(ThreadBase ../../source/ThreadBase)
add_package(Logger ../../source/Logger)
add_package(jsoncpp ../../source/jsoncpp)
add_package(pbapi ../../libs/pbapi/include)
add_package(openssl ../../libs/openssl/1.1/include)
add_package(base64 ../../source/base64)
add_package(pbsecurity ../../libs/pbsecurity/Client)


add_definitions("-D_CRT_SECURE_NO_WARNINGS")

message(STATUS "MSVC: " ${MSVC})
message(STATUS "MSVC_VERSION: " ${MSVC_VERSION})
message(STATUS "CMAKE_CL_64: " ${CMAKE_CL_64})
if(CMAKE_CL_64)
if(MSVC_VERSION EQUAL 1800)
	link_directories(${PROJECT_SOURCE_DIR}/../../libs/openssl/1.1/dynamic/win64_2013)
	link_directories(${PROJECT_SOURCE_DIR}/../../libs/pbsecurity/Client/vc120_x64_mt)
else(MSVC_VERSION EQUAL 1800)
	link_directories(${PROJECT_SOURCE_DIR}/../../libs/openssl/1.1/dynamic/win64_2019)
	link_directories(${PROJECT_SOURCE_DIR}/../../libs/pbsecurity/Client/vc142_x64_mt)
endif(MSVC_VERSION EQUAL 1800)
ELSE(CMAKE_CL_64)
if(MSVC_VERSION EQUAL 1800)
	link_directories(${PROJECT_SOURCE_DIR}/../../libs/openssl/1.1/dynamic/win32_2013)
	link_directories(${PROJECT_SOURCE_DIR}/../../libs/pbsecurity/Client/vc120_md)
	#link_directories(${PROJECT_SOURCE_DIR}/../../libs/pbsecurity/Client/A1_win32)
else(MSVC_VERSION EQUAL 1800)
	link_directories(${PROJECT_SOURCE_DIR}/../../libs/openssl/1.1/dynamic/win32_2019)
	link_directories(${PROJECT_SOURCE_DIR}/../../libs/pbsecurity/Client/vc142_md)
endif(MSVC_VERSION EQUAL 1800)
endif(CMAKE_CL_64)

add_executable(${PROJECT_NAME} ${all_file})
target_link_libraries(${PROJECT_NAME} WS2_32.LIB CRYPT32.LIB libcrypto libssl SecurityLib_A6)
#target_link_libraries(${PROJECT_NAME} WS2_32.LIB CRYPT32.LIB libcrypto libssl SecurityLib_A1)
